# ChatCore

./: .gitignore  Main.hs  README.md  chatcore.cabal
ChatCore/: ChatBuffer.hs  ChatLog.hs  ChatNetwork.hs  ChatUser.hs  ClientProtocol.lhs  Core.hs  CoreController.hs  CoreController.hs-boot  Database.hs  Events.hs  Events.hs-boot  IRC.hs  NetworkController.hs  NetworkController.hs-boot  Protocol.lhs  Protocol.lhs-boot  State.hs  Types.hs  UserController.hs  UserController.hs-boot  Util.hs
ChatCore/ChatLog/: Buffer.hs  File.hs  Line.hs  LineType.hs
ChatCore/ClientProtocol/: JSON.hs
ChatCore/IRC/: Actions.hs  Commands.hs  Connection.hs  FRP.hs  Line.hs  TH.hs
ChatCore/Protocol/: JSON.hs  Quassel.hs
ChatCore/Protocol/Quassel/: Message.hs  QVariant.hs  TH.hs  Types.hs
ChatCore/State/: Internal.hs
ChatCore/Util/: ActorUtil.hs  Error.hs  FRP.hs  KeyedEnum.hs  Parsec.hs  StateActor.hs
