-- ex: set et:

-- The name of the package.
name: chatcore

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:
--       +-+------- breaking API changes
--       | | +----- non-breaking API additions
--       | | | +--- code changes with no API change
version: 0.0.0.0

-- A short (one-line) description of the package.
synopsis: A unified IRC bouncer and Quassel Core.

-- A longer description of the package.
description: Chat Core is an IRC bouncer which aims to unify your IRC experience by supporting every possible IRC bouncer protocol. This means you can connect to a Chat Core bouncer with a Quassel client, a standard IRC client (the same way you'd connect to other bouncers such as ZNC), and potentially even more in the future.

-- The license under which the package is released.
license: MIT

-- The file containing the license text.
license-file: LICENSE

-- The package author(s).
author: Forkk

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer: forkk@forkk.net

-- A copyright notice.
copyright: Copyright (c) 2014 Forkk

category: IRC

build-type: Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version: >=1.10

executable chatcore
  -- .hs or .lhs file containing the Main module.
  main-is: Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    -- IRC Library
      ChatCore.IRC
    , ChatCore.IRC.Actions
    , ChatCore.IRC.Commands
    , ChatCore.IRC.Connection
    , ChatCore.IRC.Line
    , ChatCore.IRC.TH

    -- Controllers
    , ChatCore.CoreController
    , ChatCore.UserController
    , ChatCore.NetworkController

    -- Core Protocols
    , ChatCore.Protocol
    , ChatCore.Protocol.JSON

    -- Types
    , ChatCore.Types
    , ChatCore.Events

    -- Utility
    , ChatCore.Util.StateActor

  default-extensions:
      OverloadedStrings
    , GADTs
    , RankNTypes
    , DeriveDataTypeable

  -- Other library packages from which modules are imported.
  build-depends:
      base                          >=4.7   && <4.8
    , text                          >=1.1   && <1.2
    , bytestring                    >=0.10  && <0.11
    , data-default                  >=0.5   && <0.6
    , mtl                           >=2.2   && <2.3
    , transformers                  >=0.4   && <0.5
    , errors                        >=1.4   && <1.5
    , conduit                       >=1.1   && <1.2
    , conduit-extra                 >=1.1   && <1.2
    , network                       >=2.5   && <2.6
    , aeson                         >=0.7   && <0.8
    , parsec                        >=3.1   && <3.2
    , containers                    >=0.5   && <0.6
    , stm                           >=2.4   && <2.5
    , stm-chans                     >=3.0   && <3.1
    , stm-conduit                   >=2.5   && <2.6
    , HUnit                         >=1.2   && <1.3
    , hactor                        ==1.0.*
    , template-haskell
  
  -- Base language which the package is written in.
  default-language: Haskell2010
  

